Added BASH highlights

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
   <link rel="shortcut icon" type="image/png" href="/assets/favicon.png"/> 
   <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" /> 
-  <link rel="stylesheet" href="https://rsms.me/inter/inter-ui.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/style.css">
   <link rel="stylesheet" href="/assets/res.css" media="(max-width: 800px)">
