--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div id="hero">
   <div class="w">
     <img src="/assets/logo.svg" alt="Underland">
-    <h1>Through the Looking Glass - The Underland Blog</h1>
+    <h1>Through the Looking Glass</h1>
     <p>Here are the musings of the teams behind <a href="https://underland.dev">Underland Dev</a> and <a href="https://underland.events">Underland Events</a>.</p>
   </div>
 </div>
