--- a/assets/style.css
+++ b/assets/style.css
@@ -16,15 +16,9 @@
 }
 
 html {
-  font-family: 'Inter UI', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   color: var(--dark); 
-}
-
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: 'Inter UI var alt', sans-serif;
-  }
 }
 
 .w {
@@ -36,8 +30,8 @@ html {
 }
 
 #top {
-  background: var(--dark);
-  color: white;
+  background: var(--theme);
+  color: var(--dark);
   padding: 0.5em 0;
 }
 
@@ -56,10 +50,11 @@ html {
 
 
 #hero {
-  background: var(--theme);
-  background-image: linear-gradient(to top left, var(--theme-light), var(--theme), var(--theme-dark));
   color: var(--dark);
   padding: 3rem 0;
+  text-align: center;
+  border-bottom: 1px solid var(--light);
+  margin-bottom: 4em;
 }
 
 #hero img {
@@ -67,20 +62,22 @@ html {
   margin-bottom: 3rem;
 }
 
-#hero h1 {
+#hero h1,
+#hero h2 {
   font-size: 3em;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-color: var(--dark);
   text-decoration-style: double;
   margin-bottom: 2rem;
+  text-decoration-color: var(--theme);
 }
 
 #hero h2 {
   font-size: 1.75em;
   text-transform: uppercase;
   margin: 1.25rem 0 1rem;
-  font-weight: normal;
+  /* font-weight: normal; */
 }
 
 #hero p {
@@ -157,4 +154,18 @@ article img {
 
 article ul {
   margin-left: 1.25em;
+}
+
+article blockquote {
+  padding-left: 1em;
+  border-left: 2px solid var(--theme);
+  font-style: italic;
+  color: var(--faded-text);
+  margin-bottom: 2em;
+}
+
+article .twitter-tweet {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em !important;
 }
